--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
     </section>
 
  		<section class="main-content">
-    	<h1>Welcome to Magpii Media!</h1>
-			<h2>Our Mission</h2>
-      <p>Simply put, our mission is to help brands of any size scale the personal touch with their audience. In the digital age, there is just no excuse not to go above basic demographics and go right to the heart of indivual. In a world where the data is this big, opportunity is everywhere when you "think small".</p>
-      <h2>About Us</h2>
-			<p>Magpii Media is a dynamic imaging and digital solutions startup in the heart of Silicon Prairie. We're currently networking with some of the best minds in the industry, unlocking the power of dynamic content creation. Right now we're focused on bringing rich personalized content to the offline world of Direct Mail and would love to help you meet your marketing goals. <a href="contact.html">Contact us today</a> and let's get the conversation started.</p>
+    	<h1>You're Invited to the wedding of Brian Sullivan &amp; Candice Lukassen - 11/18/2017!</h1>
+			<h2>RSVP</h2>
+      <p>Please Respond by 10/18.</p>
+      <form method="POST" action="http://formspree.io/sulligraph@gmail.com">
+        <input type="text" name="firstname" placeholder="First Name" required>
+        <input type="text" name="lastname" placeholder="Last Name" required>
+        <input type="email" name="_replyto" placeholder="Your email">
+        <input type="radio" name="response" value="Accept" checked>joyfully accept<br>
+        <input type="radio" name="response" value="Decline">regretfully decline<br>
+        <input type="number" name="attendees" placeholder="Attendees" required>
+        <textarea name="message" placeholder="Your message"></textarea>
+        <button type="submit">Send</button>
+      </form>
 		</section>
 
 	</body>
