--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <input id="1" type="radio" name="response" value="Accept" checked><label for="1">joyfully accept</label>
         <input id="2" type="radio" name="response" value="Decline"><label for="2">regretfully decline</label>
         <input type="number" name="attendees" placeholder="Attendees" required>
-        <textarea name="message" placeholder="Your message"></textarea>
-        <button type="submit">Send</button>
+        <button type="submit">Submit</button>
       </form>
 		</section>
 
