--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#ffffff">
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
   	<link rel="stylesheet" href="/assets/css/style.css?v=758dbdb12579148c36c0c7bebbe1d08b0ba0e9fd">
-    <link rel="stylesheet" href="/assets/css/maggles.css">
+    <link rel="stylesheet" href="/assets/css/maggles.css?v=2">
 	</head>
 	<body>
   	<section class="page-header">
