--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <input type="text" name="firstname" placeholder="First Name" required>
         <input type="text" name="lastname" placeholder="Last Name" required>
         <input type="email" name="_replyto" placeholder="Your email">
-        <input id="1" type="radio" name="response" value="Accept" checked><label for="1">joyfully accept</label>
-        <input id="2" type="radio" name="response" value="Decline"><label for="2">regretfully decline</label>
+        <label><input type="radio" name="response" value="Accept" checked>joyfully accept</label>
+        <label><input type="radio" name="response" value="Decline">regretfully decline</label>
         <input type="number" name="attendees" placeholder="Attendees" required>
         <button type="submit">Submit</button>
       </form>
