--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
     </section>
 
- 		<section class="main-content">
+ 		<!-- <section class="main-content">
 			<h2>RSVP</h2>
       <p>Please Respond by 10/18.</p>
       <form method="POST" action="http://formspree.io/sulligraph@gmail.com">
@@ -33,6 +33,7 @@
         <button type="submit">Submit</button>
       </form>
 		</section>
-
+ -->
+ <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfwggdwZQeZhnGMp4CIKZV7mdkqDJrIVu9CPcsNCjbFhaNNg/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</body>
 </html>
